# athena

./: .gitignore  Cargo.toml  athena.toml  config.toml  go.mod  go.sum  justfile
cmd/athena/: main.go
crates/athena-cli/: Cargo.toml
crates/athena-cli/src/: main.rs
crates/athena-core/: Cargo.toml
crates/athena-core/src/: commands.rs  config.rs  cursor.rs  graphemes.rs  lib.rs  state.rs  theme.rs
crates/athena-term/: Cargo.toml
crates/athena-term/src/: editor.rs  lib.rs  render.rs  view.rs
crates/athena-term/src/view/: document.rs  editor.rs  status_bar.rs
crates/athena-ui/: Cargo.toml
docs/: KEYMAP.md
internal/athena/: athena.go
internal/athena/config/: config.go  editor.go  keymap.go  languages.go
internal/editor/: editor.go
internal/editor/buffer/: buffer.go  chunk.go  cursor.go  manager.go  movement.go  selection.go
internal/editor/state/: editor_state.go  mode.go  state.go
internal/editor/treesitter/: default.go  highlighter.go  languages.go  registry.go  rust.go
internal/editor/treesitter/languages/: go.go  rust.go
internal/rope/: iter.go  rope.go  rope_test.go
internal/ui/: document.go  gutters.go  status_bar.go  ui.go  view.go  viewport.go
internal/util/: fs.go  fs_test.go  helpers.go  math.go  math_test.go
rust/crates/athena-cli/src/: main.rs
rust/crates/athena-core/: Cargo.toml
rust/crates/athena-core/src/: commands.rs  lib.rs
rust/crates/athena-term/: Cargo.toml
rust/crates/athena-term/src/: terminal.rs  view.rs
rust/crates/athena-term/src/view/: status_bar.rs
