[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Zachary Meyer <zmeyer1@proton.me>"]
description = "My attempt at a modern text-editor"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.89"
thiserror = "1.0.64"
serde = { version = "1.0.210" }

ropey = "1.6.1"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
maplit = "1.0.2"

crossterm = { version = "0.28.1", features = ["event-stream"] }

tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.31"
