[package]
name = "athena-core"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ropey = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
toml = "0.8.19"
dirs = "5.0.1"
